# ae-halftone-like-ps

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
docs/: auto-build.md  build.md  parameter-mapping.md
mac/: Info.plist
src/: HalftoneTornEdges.cpp  HalftoneTornEdges.h  HalftoneTornEdgesPiPL.r  HalftoneTornEdges_Process.h  HalftoneTornEdges_Strings.cpp  HalftoneTornEdges_Strings.h
win/: HalftoneTornEdges.rc
